charts in sm-textbox div were unclickable when scrolling up page because they were behind the Overlay, so adjusted the z-index to fix

--- a/BloomingtonINTrees/src/appearance/style.scss
+++ b/BloomingtonINTrees/src/appearance/style.scss
@@ -570,7 +570,7 @@ section {
     .sm-textbox {
         width: 90%;
         // background-color: magenta;
-        z-index: 4;
+        z-index: 31; //4;
         position: relative;
         padding: 2%;  
         margin-left: auto;
